--- a/Artificial-Intelligence/Machine-Learning/AndrewNG-Notes/Week2/W2PSets.ipynb
+++ b/Artificial-Intelligence/Machine-Learning/AndrewNG-Notes/Week2/W2PSets.ipynb
@@ -336,6 +336,110 @@
     "  softmax\\text{(last row of x)} \\\\\n",
     "\\end{pmatrix}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[9.80897665e-01 8.94462891e-04 1.79657674e-02 1.21052389e-04\n",
+      "  1.21052389e-04]\n",
+      " [8.78679856e-01 1.18916387e-01 8.01252314e-04 8.01252314e-04\n",
+      "  8.01252314e-04]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def softmax(z):\n",
+    "    a = np.exp(z) / np.sum(np.exp(z), axis = 1, keepdims = True)\n",
+    "    return a\n",
+    "\n",
+    "z = np.array([[9, 2, 5, 0, 0], [7, 5, 0, 0, 0]])\n",
+    "a = softmax(z)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise: Implement the numpy vectorized version of the L1 loss. You may find the function abs(x) (absolute value of x) useful.\n",
+    "\n",
+    "Reminder:\n",
+    "\n",
+    "The loss is used to evaluate the performance of your model. The bigger your loss is, the more different your predictions (\n",
+    ") are from the true values (\n",
+    "). In deep learning, you use optimization algorithms like Gradient Descent to train your model and to minimize the cost.\n",
+    "L1 loss is defined as\n",
+    "\n",
+    "$L_1(\\hat{y}, y) = \\sum_{i=0}^m|y^{(i)} - \\hat{y}^{(i)}| $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def l1_loss(y, yhat):\n",
+    "    l1 = np.sum(np.abs(y - yhat))\n",
+    "    return l1\n",
+    "\n",
+    "yhat = np.array(([.9, .2, .1, .4, .9]))\n",
+    "y = np.array(([1, 0, 0 ,1, 1]))\n",
+    "\n",
+    "l1 = l1_loss(y, yhat)\n",
+    "\n",
+    "print(l1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise: Implement the numpy vectorized version of the L2 loss.\n",
+    "\n",
+    "$L_2(\\hat{y},y) = \\sum_{i=0}^m(y^{(i)} - \\hat{y}^{(i)})^2 $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "def l2_loss(y, yhat):\n",
+    "    l2 = np.sum((y - yhat) ** 2)\n",
+    "    return l2\n",
+    "\n",
+    "yhat = np.array([.9, 0.2, 0.1, .4, .9])\n",
+    "y = np.array([1, 0, 0, 1, 1])\n",
+    "\n",
+    "l2 = l2_loss(y, yhat)\n",
+    "\n",
+    "print(l2)"
+   ]
   }
  ],
  "metadata": {
