--- a/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
@@ -13,6 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## NOTE: DIMS OF Y_TRAIN / Y_PRED ARE WRONG. JUST USED THOSE DIMS FOR TESTING PURPOSES\n",
+    "\n",
+    "in a real scenairo, would not be that."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "MSE"
    ]
   },
@@ -77,6 +86,42 @@
     "\n",
     "print(f\"MAE: {MAE}\")\n",
     "print(f\"MAE DERIVATIVE: {MAE_deriv}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binary Cross Entropy Loss\n",
+    "\n",
+    "$BCE = -\\frac{1}{m} \\sum Y * \\log(\\hat{Y}) + ( 1 - Y) * \\log(1 - \\hat{Y})$, $m = numsamples$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BCE: 1.145166283279089\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_train = [0, 1 , 1, 0, 0, 1, 1, 1, 0, 1]\n",
+    "y_train = np.array(y_train)\n",
+    "\n",
+    "y_pred = np.random.rand(1, 10)\n",
+    "\n",
+    "m = 10\n",
+    "eps = 1e-10\n",
+    "\n",
+    "bce_loss = - (1/m) * np.sum(y_train * np.log(y_pred + eps) + (1 - y_train) * np.log(1 - y_pred + eps))\n",
+    "\n",
+    "print(f\"BCE: {bce_loss}\")"
    ]
   }
  ],
