--- a/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BCE: 1.145166283279089\n"
+      "BCE: 1.0704242936177335\n"
      ]
     }
    ],
@@ -122,6 +122,102 @@
     "bce_loss = - (1/m) * np.sum(y_train * np.log(y_pred + eps) + (1 - y_train) * np.log(1 - y_pred + eps))\n",
     "\n",
     "print(f\"BCE: {bce_loss}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CCE: 2.1404662435176105\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = 3\n",
+    "num_samples = 5\n",
+    "y_train = np.array([\n",
+    "    [1, 0, 0],  # Sample 1: Class 0\n",
+    "    [0, 1, 0],  # Sample 2: Class 1\n",
+    "    [0, 0, 1],  # Sample 3: Class 2\n",
+    "    [1, 0, 0],  # Sample 4: Class 0\n",
+    "    [0, 0, 1]   # Sample 5: Class 2\n",
+    "])\n",
+    "\n",
+    "\n",
+    "y_pred = np.array([\n",
+    "    [0.7, 0.2, 0.1],  # Sample 1: Class 0 with high probability\n",
+    "    [0.1, 0.8, 0.1],  # Sample 2: Class 1 with high probability\n",
+    "    [0.2, 0.3, 0.5],  # Sample 3: Class 2 with highest probability\n",
+    "    [0.6, 0.3, 0.1],  # Sample 4: Class 0 with high probability\n",
+    "    [0.1, 0.2, 0.7]   # Sample 5: Class 2 with highest probability\n",
+    "])\n",
+    "\n",
+    "CCE = - np.sum(y_train * np.log(y_pred))\n",
+    "\n",
+    "print(f\"CCE: {CCE}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SCE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sce: 0.4280932487035221\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_classes = 3\n",
+    "num_samples = 5\n",
+    "y_train = np.array([\n",
+    "    [1, 0, 0],  # Sample 1: Class 0\n",
+    "    [0, 1, 0],  # Sample 2: Class 1\n",
+    "    [0, 0, 1],  # Sample 3: Class 2\n",
+    "    [1, 0, 0],  # Sample 4: Class 0\n",
+    "    [0, 0, 1]   # Sample 5: Class 2\n",
+    "])\n",
+    "\n",
+    "\n",
+    "y_pred = np.array([\n",
+    "    [0.7, 0.2, 0.1],  # Sample 1: Class 0 with high probability\n",
+    "    [0.1, 0.8, 0.1],  # Sample 2: Class 1 with high probability\n",
+    "    [0.2, 0.3, 0.5],  # Sample 3: Class 2 with highest probability\n",
+    "    [0.6, 0.3, 0.1],  # Sample 4: Class 0 with high probability\n",
+    "    [0.1, 0.2, 0.7]   # Sample 5: Class 2 with highest probability\n",
+    "])\n",
+    "\n",
+    "def smoothed_hot(one_hot_y, alpha, classes):\n",
+    "    sce = one_hot_y * (1 - alpha) + (alpha / classes)\n",
+    "    return sce\n",
+    "\n",
+    "smth_hot = smoothed_hot(y_train, .05, 10)\n",
+    "\n",
+    "sce = -(1 / 5) * np.sum(y_train * np.log(y_pred))\n",
+    "\n",
+    "print(f\"sce: {sce}\")\n"
    ]
   }
  ],
