--- a/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/LossFuncs/LossFuncs.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -218,6 +219,47 @@
     "sce = -(1 / 5) * np.sum(y_train * np.log(y_pred))\n",
     "\n",
     "print(f\"sce: {sce}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sparse Entropy\n",
+    "\n",
+    ">_The implementation is wrong. Or at least not working. Need to fix this_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103.74174658564566\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sparse import forward, init_params\n",
+    "\n",
+    "data = pd.read_csv('data/fashion-mnist_train.csv') # 900 samples, 7 Features\n",
+    "\n",
+    "data = np.array(data) #60000, 785\n",
+    "\n",
+    "X_train = data[:, 1:785].T / 255 #784, 60000\n",
+    "Y_train = data[:, 0].reshape(1, -1) #1, 60000\n",
+    "\n",
+    "w1, b1, w2, b2 = init_params()\n",
+    "z1, a1, z2, a2 = forward(X_train, w1, b1, w2, b2)\n",
+    "\n",
+    "eps = 1e-10\n",
+    "l = - np.sum(Y_train* np.log(a2 + eps)) / 60000\n",
+    "\n",
+    "print(l)\n"
    ]
   }
  ],
