--- a/DEEPLEARNING/NeuralNetworks/WeightInitialization/weightinit.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/WeightInitialization/weightinit.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### sample 1\n",
+    "### instance 1\n",
     "\n",
     "The below shows the vanishing gradient problem.\n",
     "\n",
