--- a/DEEPLEARNING/NeuralNetworks/GradientChecking/gradcheck.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/GradientChecking/gradcheck.ipynb
@@ -2,29 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from GradientChecking.gradcheckLinear import forward, backward, load_model, one_hot"
+    "from Linear import mse, init_params\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Basic Gradient Checking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(784, 60000)\n",
-      "(1, 60000)\n"
+      "Shape of J: (1, 127)\n",
+      "First val of J: 2.92028892055268\n"
      ]
     }
    ],
+   "source": [
+    "\n",
+    "data = pd.read_csv('data/random1.csv')\n",
+    "data = np.array(data)\n",
+    "\n",
+    "X_train = data[:, :1].T\n",
+    "Y_train = data[:, 1].reshape(1, -1)\n",
+    "\n",
+    "w, b = init_params()\n",
+    "\n",
+    "def forward(x, w):\n",
+    "    pred = np.dot(w, x)\n",
+    "    return pred\n",
+    "\n",
+    "J = forward(X_train, w )\n",
+    "print(f\"Shape of J: {J.shape}\") \n",
+    "print(f\"First val of J: {J[0, 0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backwards(x, y, pred):\n",
+    "    dw = x\n",
+    "    return dw\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First val of DW: 1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "grad = backwards(X_train, Y_train, J)\n",
+    "\n",
+    "print(f\"First val of DW: {grad[0,0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](<Screenshot 2024-06-07 at 9.15.13 AM.png>)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.4\n",
+      "11.400000001771105\n",
+      "\n",
+      "Avg Difference : 0.00000000039643172910\n"
+     ]
+    }
+   ],
+   "source": [
+    "eps = 1e-7\n",
+    "\n",
+    "wplus = w + eps\n",
+    "wminus = w - eps\n",
+    "\n",
+    "jplus = forward(X_train, wplus)\n",
+    "jminus = forward(X_train, wminus)\n",
+    "\n",
+    "gradapprox = (jplus - jminus) / (2 * eps)\n",
+    "\n",
+    "\n",
+    "difference_num = np.linalg.norm((grad - gradapprox), ord=2)\n",
+    "graddifference_denum = np.linalg.norm(grad, ord = 2)\n",
+    "gradapproxdifference_denum = np.linalg.norm(gradapprox, ord = 2)\n",
+    "\n",
+    "difference = (difference_num) / (graddifference_denum + gradapproxdifference_denum)\n",
+    "\n",
+    "print(grad[0, 10])\n",
+    "print(gradapprox[0,10])\n",
+    "\n",
+    "print('\\nAvg Difference : {:.20f}'.format(difference))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Network Gradient Checking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nn import init_params, leaky_relu, leaky_relu_deriv, softmax, one_hot, cce\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data = pd.read_csv('data/fashion-mnist_train.csv')\n",
     "data = np.array(data)\n",
@@ -32,118 +156,143 @@
     "X_train = data[:, 1:785].T / 255\n",
     "Y_train = data[:, 0].reshape(1, -1)\n",
     "\n",
-    "one_hot_y = one_hot(Y_train)\n",
-    "\n",
-    "print(X_train.shape)\n",
-    "print(Y_train.shape)\n"
+    "w1, b1, w2, b2 = init_params()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cce(one_hot_y, a):\n",
-    "    eps = 1e-10\n",
-    "    l = - np.sum((one_hot_y * np.log(a + eps)))  / 60000\n",
-    "    return l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File not found, initializing new model!\n"
+      "2.302157472675863\n",
+      "(64, 784)\n",
+      "(10, 64)\n"
      ]
     }
    ],
    "source": [
-    "file = 'models/gradchnn.pkl'\n",
+    "def forward_n(Y, X, w1, b1, w2, b2):\n",
+    "    \n",
+    "    one_hot_y = one_hot(Y)\n",
     "\n",
-    "w1, b1, w2, b2 = load_model(file)\n",
+    "    z1 = np.dot(w1, X) + b1\n",
+    "    a1 = leaky_relu(z1)\n",
+    "    z2 = np.dot(w2, a1) + b2\n",
+    "    a2 = softmax(z2)\n",
     "\n",
-    "eps = 1e-7\n",
+    "    loss = cce(one_hot_y, a2)\n",
     "\n",
-    "w1plus = w1 + eps\n",
-    "b1plus = b1 + eps\n",
-    "w2plus = w2 + eps\n",
-    "b2plus = b2 + eps\n",
+    "    return z1, a1, z2, a2, w1, b1, w2, b2, one_hot_y, loss\n",
     "\n",
-    "w1minus = w1 - eps\n",
-    "b1minus = b1 - eps\n",
-    "w2minus = w2 - eps\n",
-    "b2minus = b2 - eps\n",
+    "z1, a1, z2, a2, w1, b1, w2, b2, one_hot_y, loss = forward_n(Y_train, X_train, w1, b1,w2, b2)\n",
+    "print(loss)\n",
     "\n",
-    "z1, a1, z2, a2 = forward(X_train, w1, b1, w2, b2)\n",
-    "dw1, db1, dw2, db2 = backward(X_train, one_hot_y, w2, a2, a1, z1)\n"
+    "def backward_n(x, one_hot_y, w2, a2, a1, z1):\n",
+    "    dz2 = a2 - one_hot_y\n",
+    "    dw2 = np.dot(dz2, a1.T) / one_hot_y.shape[1]\n",
+    "    db2 = np.sum(dz2, axis = 1, keepdims=True) / one_hot_y.shape[1]\n",
+    "    dz1 = np.dot(w2.T, dz2) * leaky_relu_deriv(z1)\n",
+    "    dw1 = np.dot(dz1, x.T) / one_hot_y.shape[1]\n",
+    "    db1 = np.sum(dz1, axis = 1, keepdims=True) / one_hot_y.shape[1]\n",
+    "    return dz1, db1, dw1, dz2, db2, dw2\n",
+    "\n",
+    "dz1, db1, dw1, dz2, db2, dw2 = backward_n(X_train, one_hot_y, w2, a2, a1, z1)\n",
+    "print(dw1.shape)\n",
+    "print(dw2.shape)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COMPUTING FOR W2"
+    "### Checking DW2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.344594033720181\n",
-      "2.344594033720181\n",
-      "0.0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Improper number of dimensions to norm.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m dw2_approx \u001b[38;5;241m=\u001b[39m (loss_plus \u001b[38;5;241m-\u001b[39m loss_minus) \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m eps) \n\u001b[1;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(dw2_approx)\n\u001b[0;32m---> 14\u001b[0m check \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(dw2_approx \u001b[38;5;241m-\u001b[39m dw2, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m) \u001b[38;5;241m/\u001b[39m (\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlinalg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnorm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdw2_approx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mord\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39mnorm(dw2, \u001b[38;5;28mord\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m))\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28mprint\u001b[39m(check)\n",
-      "File \u001b[0;32m/opt/miniconda3/lib/python3.12/site-packages/numpy/linalg/linalg.py:2633\u001b[0m, in \u001b[0;36mnorm\u001b[0;34m(x, ord, axis, keepdims)\u001b[0m\n\u001b[1;32m   2631\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\n\u001b[1;32m   2632\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 2633\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mImproper number of dimensions to norm.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Improper number of dimensions to norm."
+      "0.0037808267627781333\n",
+      "0.0037808228651304778\n",
+      "0.00000103089824002336\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "_, _, _, a2plus = forward(X_train, w1, b1, w2plus, b2)\n",
-    "_, _, _, a2minus = forward(X_train, w1, b1, w2minus, b2)\n",
+    "w1plus = w1.copy()\n",
+    "w1minus = w1.copy()\n",
+    "w2plus = w2.copy()\n",
+    "w2minus = w2.copy()\n",
     "\n",
-    "loss_plus = cce(one_hot_y, a2plus)\n",
-    "loss_minus = cce(one_hot_y, a2minus)\n",
+    "eps = 1e-7\n",
     "\n",
-    "dw2_approx = (loss_plus - loss_minus) / (2 * eps) "
+    "w2plus[0, 7] += eps\n",
+    "w2minus[0, 7] -= eps\n",
+    "\n",
+    "z1, a1, z2, a2, w1, b1, w2plus, b2, one_hot_y, lossplus = forward_n(Y_train, X_train, w1, b1, w2plus, b2)\n",
+    "z1, a1, z2, a2, w1, b1, w2minus, b2, one_hot_y, lossminus = forward_n(Y_train, X_train, w1, b1, w2minus, b2)\n",
+    "\n",
+    "gradapprox = (lossplus - lossminus) / (2 * eps)\n",
+    "\n",
+    "print(gradapprox)\n",
+    "print(dw2[0,7])\n",
+    "\n",
+    "num = np.linalg.norm(dw2[0, 7] - gradapprox)\n",
+    "denom = np.maximum(np.linalg.norm(dw2[0, 7]), np.linalg.norm(gradapprox))\n",
+    "diff = num / denom\n",
+    "\n",
+    "print('{:.20f}'.format(diff))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking DW1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File not found, initializing new model!\n",
-      "Gradient Check Difference: 0.8824646616927213\n"
+      "0.00002517319686035080\n",
+      "0.00002517492079837439\n",
+      "0.00006847838916336178\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "w1plus[0, 7] += eps\n",
+    "w1minus[0, 7] -= eps\n",
+    "\n",
+    "z1, a1, z2, a2, w1plus, b1, w2, b2, one_hot_y, lossplus = forward_n(Y_train, X_train, w1plus, b1, w2, b2)\n",
+    "z1, a1, z2, a2, w1minus, b1, w2, b2, one_hot_y, lossminus = forward_n(Y_train, X_train, w1minus, b1, w2, b2)\n",
+    "\n",
+    "gradapprox = (lossplus - lossminus) / (2 * eps)\n",
+    "\n",
+    "num = np.linalg.norm(dw1[0, 7] - gradapprox)\n",
+    "denom = np.maximum(np.linalg.norm(dw1[0, 7]), np.linalg.norm(gradapprox))\n",
+    "diff = num / denom\n",
+    "\n",
+    "print('{:.20f}'.format(gradapprox))\n",
+    "print('{:.20f}'.format(dw1[0,7]))\n",
+    "print('{:.20f}'.format(diff))"
+   ]
   }
  ],
  "metadata": {
@@ -162,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
