--- a/DEEPLEARNING/NeuralNetworks/playground.ipynb
+++ b/DEEPLEARNING/NeuralNetworks/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,6 +30,36 @@
     "\n",
     "print(gamma)\n",
     "print(gamma.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.48559806 0.88136515]\n",
+      " [0.13696154 0.47950922]\n",
+      " [0.60680524 0.06028917]\n",
+      " [0.42291484 0.51683314]\n",
+      " [0.30261753 0.54664849]\n",
+      " [0.90245575 0.23688647]\n",
+      " [0.5140031  0.74587996]\n",
+      " [0.3604867  0.83636213]\n",
+      " [0.39151707 0.74361458]\n",
+      " [0.35760522 0.22882627]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.random.randn(10, 2)\n",
+    "\n",
+    "f = lambda x: 1/(1+ np.exp(x))\n",
+    "\n",
+    "print(f(x))"
    ]
   }
  ],
