--- a/MachineLearning/AndrewNg/Exercise1/exercise1.ipynb
+++ b/MachineLearning/AndrewNg/Exercise1/exercise1.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "\n",
     "# Plotting library\n",
-    "from matplotlib import pyplot\n",
+    "from matplotlib import pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D  # needed to plot 3-D surfaces\n",
     "\n",
     "# library written for this exercise providing additional functions for assignment submission, and others\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
     "    Return the 5x5 identity matrix.\n",
     "    \"\"\"    \n",
     "    # ======== YOUR CODE HERE ======\n",
-    "    A = []   # modify this line\n",
+    "    A = np.eye(5)   # modify this line\n",
     "    \n",
     "    # ==============================\n",
     "    return A"
@@ -149,9 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "warmUpExercise()"
    ]
@@ -173,9 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Submitting Solutions | Programming Exercise linear-regression\n",
+      "\n",
+      "Invalid email or token. You used an invalid email or your token may have expired. Please make sure you have entered all fields correctly. Try generating a new token if the issue still persists.\n"
+     ]
+    }
+   ],
    "source": [
     "# appends the implemented function in part 1 to the grader object\n",
     "grader[1] = warmUpExercise\n",
@@ -199,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read comma separated data\n",
     "data = np.loadtxt(os.path.join('Data', 'ex1data1.txt'), delimiter=',')\n",
-    "X, y = data[:, 0], data[:, 1]\n",
+    "x, y = data[:, 0], data[:, 1]\n",
     "\n",
     "m = y.size  # number of training examples"
    ]
@@ -267,11 +293,11 @@
     "    using plot(..., 'ro', ms=10), where `ms` refers to marker size. You \n",
     "    can also set the marker edge color using the `mec` property.\n",
     "    \"\"\"\n",
-    "    fig = pyplot.figure()  # open a new figure\n",
+    "    fig = plt.figure()  # open a new figure\n",
     "    \n",
     "    # ====================== YOUR CODE HERE ======================= \n",
     "    \n",
-    "\n",
+    "    plt.plot(x, y, 'ro', ms = 10, mec = 'k')\n",
     "    # =============================================================\n"
    ]
   },
@@ -1299,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
