--- a/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
+++ b/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
@@ -1,12 +1,12 @@
 # The Geometry of Linear Equations
 
-A dot product is a multiplication between two vectors, 
+### Dot Product
 
-$\begin{bmatrix}a_1 \\ a_2\end{bmatrix} \cdot \begin{bmatrix}x_1, x_2\end{bmatrix} = \begin{bmatrix}a_1x_1 + a_2x_2\end{bmatrix} = C$
-
-where each element the of the first vector is multiplied correspondingly to the elements in the second vector and then summed.
+A dot product is a multiplication between two vectors, where each element the of the first vector is multiplied correspondingly to the elements in the second vector and then summed.
 
 The dot product then makes up a bigger Matrix Multiplication.
+
+### Mat Mul
 
 A matrix multiplication is a multiplication by 2 matrices, where each row of the first matrix corresponds to the dot product of each column in the second matrix.
 
@@ -24,11 +24,13 @@ $C = \begin{bmatrix} z_{11} \cdot b_{11} + z_{12} \cdot b_{21} + z_{13} \cdot b_
 
 <br>
 
+### Systems of Lin Eq.
+
 Then systems of Linear Equations are a set of equations with $n$ unknowns.
 
 The goal of these systems of equations are to compute these $n$ unknowns by solving each equation for each unknown.
 
-A system of linear equations is traditionally defined as:
+A system of linear equations is traditionally defined the row way as:
 
 $2x - y = 0$
 
@@ -38,13 +40,23 @@ where it can be solved graphically as:
 
 <img src = 'images/row.png' width = 300></img>
 
-while it can also be defined through matrices as:
+> *Note that if lines are parallel, the system has no solution. If the lines are the same, they have infinitely many solutions.*
+
+The row picture is a means to visualize a system of linear equations, portraying each equation as a separate row.
+
+$\begin{cases}a_{11}x_1 + a_{12}x_2 = b_1 \\a_{21}x_1 + a_{22}x_2 = b_2\end{cases}$
+
+Each equation, depending on it's dimensionality, represents an $nth$-dimensional plane on a $nth$-dimensional plot.
+
+When plotting this system of linear equations, the intersection between the equations represents the solution to it.
+
+**While it can also be defined through matrices as:**
 
 $\begin{bmatrix} 2, -1 \\ -1, 2 \end{bmatrix} \begin{bmatrix}x \\ y \end{bmatrix} = \begin{bmatrix} 0 \\ 3 \end{bmatrix}$
 
-where this representation is a [[Matrix Multiplication]].
+where this representation is a Matrix Multiplication.
 
-It can also be defined as a linear combination (column way, per Gilbert Strang), as:
+It can also be defined as a linear combination as : 
 
 $x\begin{bmatrix} 2 \\ -1 \end{bmatrix} + y \begin{bmatrix} -1 \\ 2 \end{bmatrix} = \begin{bmatrix} 0 \\ 3 \end{bmatrix}$
 
@@ -52,5 +64,96 @@ which can be solved graphically as:
 
 <img src = 'images/column.png' width = 600></img>
 
+> [!NOTE] 
+> *I'm not writing math based notes anymore, this takes too long, screw latex.*<br>
+> *Will just be writing text-based pointers and principles as I go.*
 
+The column picture is another way to visualize a system of linear equations, as a linear combination of a set of variables and coefficients (represented a column vectors).
 
+$x_1 \begin{pmatrix} a_{11} \\ a_{21} \end{pmatrix} + x_2 \begin{pmatrix} a_{12} \\ a_{22} \end{pmatrix} = \begin{pmatrix} b_1 \\ b_2 \end{pmatrix}$
+
+The goal, when solving via linear combination, is to figure out which combination of $x_1$ and $x_2$, or which combination of each vector, yields the vector $B$.
+
+> *It's helpful to think of this as as element wise multiplication and then a summation to get vector $B$*
+
+Graphically solving this system of linear equations involves taking a column vector, plotting it, then adding the the next column vector, in a manner that enables us to get the vector coordinates $B$ as a final destination.
+
+In essence, the solution is found via vector addition.
+
+**Plotting Systems of Equations with 3 Unknowns (3 dimensional)**
+
+Given a system of linear equations, with 3 unknowns, graphically, plotting each row would yield a plane in 3 dimensions.
+
+Finding the intersection of these 3 planes at their given coordinates would then result in the solution for the system of linear equations, but doing so graphically is impractical and can be better solved arithmetically.
+
+> Definitions are within the < div >s, notes continues after the < div >
+___
+**Non-Singular Matrix**
+
+A non-singular matrix, $A$, is a square matrix where it's determinant is non-zero, thereby it is invertible as $A^{-1}$.
+
+Thereby a non-singular matrix, in a linear system of equations $Ax = b$, has a unique solution for any existing vector $b$ that can be given by $x = A^{-1}+ b$, because $A^{-1}$ exists as $A$ is determinant, and $A^{-1} A = I$ (Identity Matrix) is true.
+
+Thereby a system of linear equations is easier to compute, as $x$ is simply equivalent to $x = A^{-1}b$.
+
+Then, the invertible matrix of a square matrix is found by
+
+1. Finding the Determinant of the matrix
+2. Finding the Adjugate of the matrix
+3. Dividing as $\frac{adj}{det}$
+
+A matrix $A$ is considered to be invertible when $AB = BA = I$
+
+**Determinant**
+
+To find the determinant of a $2, 2$ matrix you subtract the product of the top left and lower right with the product of the top right and lower left.
+
+$A = \begin{bmatrix} a, b \\ c, d \end{bmatrix}$
+
+$det(A) = ad - bc$
+
+To find the determinant of a $3, 3$ matrix, you take each value in the first row and multiply it by determinant of the remaining rows, barring the column that the value in the first row was in when taking the determinant of the remaining rows.
+
+Then the multiplication, done for each value in the first row (so $3$) is then added or subtracted, done in an alternating fashion.
+
+This process is called a co-factor expansion or Laplace Expansion
+
+$\det\begin{pmatrix} a & b & c \\ d & e & f \\ g & h & i \end{pmatrix} = a \cdot \det\begin{pmatrix} e & f \\ h & i \end{pmatrix} - b \cdot \det\begin{pmatrix} d & f \\ g & i \end{pmatrix} + c \cdot \det\begin{pmatrix} d & e \\ g & h \end{pmatrix}$
+
+$\det\begin{pmatrix} 1 & 2 & 3 \\ 0 & 1 & 4 \\ 5 & 6 & 0 \end{pmatrix} = 1 \cdot (1 \cdot 0 - 4 \cdot 6) - 2 \cdot (0 \cdot 0 - 4 \cdot 5) + 3 \cdot (0 \cdot 6 - 1 \cdot 5)$
+
+This determinant can define multiple things, one of them being the invertibility of a matrix.
+
+**Adjugate**
+
+The $adj()$ of a square matrix is found by swapping elements on the diagonal and then changing the signs of the off-diagonal elements.
+
+$A = \begin{bmatrix} 1, 2 \\ 3, 4 \end{bmatrix}$
+
+$adj(A) = \begin{bmatrix} 4, -2 \\ -3, 1 \end{bmatrix}$
+
+___
+
+In a system of 3 linear equations, if the 3rd column vector is within the same plane of the latter 2 vectors, then it is linearly dependent on a linear combination of those latter 2 vectors.
+
+Thereby, the vector is singular and it the full system of 3 linear equations doesn't have a unqiue solution $x$ for any vector $\vec{b}$.
+
+> *Unique, meaning that there can only be 1 value of $x$ that yields $\vec{b}$*
+
+Instead, we can only find a unique solution $x$ for the $b$ within the plane given and defined by the first and second column vectors. We can't find a unique solution $x$ for vectors that lie outside of that plane.
+
+The bounds for any $\vec{b}$ depend on $Col(A)$.
+
+$Col()$, also known as the column space of a matrix denotes all the possible outputs of a linear combination $Ax$, within $\mathbb{R}^n$, where $n$ is the $nth$-dimension.
+
+Therefore, $\vec{b}$ must exist within $Col(A)$ and again, therefore must be within the dimensionality of $A$. If $A$ is an $m$ x $n$ matrix, $b$ must exist within $\mathbb{R}^m$.
+
+**As a more complex example:**
+
+If we have a hypothetical $9$-dimensional matrix $A$, denoting a system of linear equations, if the $9th$ column vector was linearly dependent on the $8th$ column vector, the $Col(A)$ wouldn't represent the output of the linear combination $Ax$.
+
+Given that only a subset of $8$ column vectors are linearly independent, call this matrix $B$ of size $9, 8$, then an output $C$ would be within to $Col(B)$ within $\mathbb{R}^{9}$
+
+### Textbook Notes ( beginning $\rightarrow$ 48)
+
+- If we had a system of equations with 3 unknowns, to produce every point in a given $Col(A)$ or $span$ of $A$ we'd need at least 3 equations because as minimum, we need the same number of equations to unknowns.
