--- a/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
+++ b/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
@@ -154,6 +154,92 @@ If we have a hypothetical $9$-dimensional matrix $A$, denoting a system of linea
 
 Given that only a subset of $8$ column vectors are linearly independent, call this matrix $B$ of size $9, 8$, then an output $C$ would be within to $Col(B)$ within $\mathbb{R}^{9}$
 
-### Textbook Notes ( beginning $\rightarrow$ 48)
+# 1.X of Introduction to Statistical Learning
 
-- If we had a system of equations with 3 unknowns, to produce every point in a given $Col(A)$ or $span$ of $A$ we'd need at least 3 equations because as minimum, we need the same number of equations to unknowns.
+
+The 4 fundamental subspaces within linear algebra are:
+
+1. [[Column Space]]
+2. [[Row Space]]
+3. [[Null Space]]
+4. [[Left Null Space]]
+
+$Col()$, also known as the column space of a matrix denotes all the possible outputs of a linear combination $Ax$, within $\mathbb{R}^n$, where $n$ is the $nth$-dimension.
+
+The row space, or $Row()$ denotes the possible space or span of the rows of a given matrix $A$.
+
+If we had a matrix:
+
+$A = \begin{pmatrix} 1, 2 \\ 4, 3 \\ 9, 2 \end{pmatrix}$
+
+The individual rows would be $\begin{pmatrix}1, 2 \end{pmatrix}$, $\begin{pmatrix}4, 3 \end{pmatrix}$, and $\begin{pmatrix}9, 2 \end{pmatrix}$.
+
+Let's call them $a$, $b$, and $c$ correspondingly.
+
+Then, the $Row()$ is the possible span that can be covered by a linear combination of $a$, $b$, and $c$, provided that they are linearly independent.
+
+When computing a linear combination amongst the row space, we then treat each row vector as a separate "column" in the [[Column Picture]] and the [[Row Picture]].
+
+Or the row space can then be seen as the column space of the transpose of $A$, as $A^T$
+
+The null space of a matrix, say $A$, is defined as the set of vectors $x$ that yield the zero vector when taking the linear combination of:
+
+$A\vec{x}$
+
+Thereby $A\vec{x} = \vec{0}$ must be true for any vector $\vec{x}$ to be the the $Nul(A)$
+
+The left [[null space]] is the [[null space]] of the transpose of a matrix, say $A^T$
+
+## Vectors and Matrices
+
+The length of a vector, as $||x||$, can be found as the $L_2$ norm per default unless otherwise specified.
+
+If a vector $\vec{v}$ and a vector $\vec{d}$ are linearly independent, then in a linear combination as $x\vec{v} + y\vec{d}$ can yield any $b$ so long as $b$ remains on the $\mathbb{R}^n$ where $\vec{v}$ and $\vec{d}$ are within the $\mathbb{R}^n$
+
+### Vectors in Three Dimensions
+
+If a vector $\vec{v}$ has 3 components, then the vector exists within $\mathbb{R}^3$.
+
+Say we have 2 vectors, $\vec{v}$ and $\vec{w}$, both within $\mathbb{R}^3$.
+
+A linear combination of those vectors then yield $\vec{b}$ as
+
+<div align = 'center'>
+
+$x\vec{v} + y\vec{w} = \vec{b}$
+</div>
+
+Given that we only have 2 vectors, we only have 2 multiplicative coefifcientes $x$ and $y$ within the linear combination. Yet the vectors $\vec{v}$ and $\vec{w}$ exist within the $\mathbb{R}^3$ space. 
+
+So given that we only have 2 combinations of $x\vec{v}$ and $y\vec{w}$, the output vector $\vec{b}$ then is in $R^3$ but lies within the 2 dimensional subspace of $\mathbb{R}^3$, as $\mathbb{R}^2$ for any $x$ and $y$, given that we only leverage 2 dimensions, say $x$ and $y$ to transform $\vec{v}$ and $\vec{w}$ to get $\vec{b}$
+
+If we want an output vector to fill the entire $\mathbb{R}^3$ for any coefficient, rather than just a subspace of $\mathbb{R}^3$, we need to introduce a 3rd vector in the linear combination.  
+
+
+<details> <summary> Examples </summary> 
+<br>
+Assumign all are linearly independent
+
+#### Example 1: 3 Vectors in ℝ²
+
+- **Vectors**: $\vec{v}_1, \vec{v}_2, \vec{v}_3$ are in $\mathbb{R}^2$, each with 2 components.
+- **Linear Combination**: $x_1 \vec{v}_1 + x_2 \vec{v}_2 + x_3 \vec{v}_3$.
+- **Space**: Vectors $\vec{v}_1, \vec{v}_2, \vec{v}_3$ are in $\mathbb{R}^2$.
+- **Subspace Spanned**: Can be up to 2-dimensional within $\mathbb{R}^2$
+
+This linear combination is a combination of 3 vectors within a 2 dimensional space
+
+#### Example 2: 2 Vectors in ℝ³
+
+- **Vectors**: $\vec{w}_1, \vec{w}_2$ are in $\mathbb{R}^3$, each with 3 components.
+- **Linear Combination**: $y_1 \vec{w}_1 + y_2 \vec{w}_2$.
+- **Space**: Vectors $\vec{w}_1, \vec{w}_2$ are in $\mathbb{R}^3$.
+- **Subspace Spanned**: Can be up to 2-dimensional within $\mathbb{R}^3$
+
+This linear combination is a combination of 3 vectors within a 3 dimensional space
+
+Ultimately, the subspace space that a vector exists within is determined by the number of vectors within a linear combination ( or the basis vectors ), but then the overarching space that the vector is within is determined by the the number of values it has within.
+
+It isn't possible for a given sytstem of linear equatiosn to have more unknowns than equations. There must be a coefficient $n$ for each equation $n$, if each vector is linearly independent. Otherwise, if there are more unknowns than equations, then one of the vectors is linearly dependent on another.
+
+</details>
